# hit

./: .gitignore  Cargo.toml  README.md
.github/workflows/: codecov.yml  rust.yml
docs/: unique_in_parent.drawio
src/: kernel.rs  lib.rs  macros.rs  object_data.rs  test_kernel.rs
src/errors/: app_error.rs  hit_error.rs  mod.rs  model_error.rs  validation_error.rs
src/events/: mod.rs  on_field_set.rs
src/hit/: hit.rs  hit_importer.rs  mod.rs
src/hit/helpers/: can_create_object.rs  hit_move_helper.rs  mod.rs
src/hit_mod/: hit.rs  hit_entry.rs  hit_importer.rs
src/hit_mod/helpers/: can_create_object.rs  hit_copy_helper.rs  hit_move_helper.rs  mod.rs
src/import/: diff.rs  generic_import.rs  mod.rs  patches.rs
src/index/: find_references_before_deletion.rs  index.rs  index_entry.rs  index_importer.rs  mod.rs  move_object.rs  reference_helpers.rs  reference_index_helpers.rs  remove_helpers.rs  subobject_helpers.rs
src/index/list_helpers/: mod.rs  private.rs
src/json/: export.rs  import.rs  mod.rs  utils.rs
src/model/: mod.rs  model.rs  model_field.rs
src/model/field_types/: field_type_bool.rs  field_type_date.rs  field_type_float.rs  field_type_integer.rs  field_type_reference.rs  field_type_reference_array.rs  field_type_string.rs  field_type_string_vec.rs  field_type_subobject.rs  field_type_subobject_array.rs  mod.rs
src/model/index/: indexed_model.rs  (+3 more)
src/plugins/: mod.rs  model_type_indexer.rs  plugin.rs
src/prelude/: mod.rs
src/tests/: mod.rs  test_create.rs  test_events.rs  test_find_references_recursive.rs  test_helpers.rs  test_key_exists.rs  test_remove_object.rs  test_remove_reference.rs  test_validation.rs
src/utils/: kernel_init.rs  mod.rs  model_property_vectors.rs
(+36 files in other folders)
