[package]
name = "indexed_model"
version = "0.1.0"
authors = ["lucas <wimpheling@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
mopa = "0.2.2"


