[package]
name = "hit"
version = "0.0.1"
authors = ["wimpheling <wimpheling@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Hierarchical Indexed Typed data structure"
homepage = "https://github.com/wimpheling/hit"
repository = "https://github.com/wimpheling/hit"
documentation = "https://docs.rs/crate/hit"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
linked-hash-map = "0.5.3"