[package]
name = "hit-data"
version = "0.0.1"
authors = ["Lucas Trostaniecki <wimpheling@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Hierarchical Indexed Typed data structure"
homepage = "https://github.com/wimpheling/hit"
repository = "https://github.com/wimpheling/hit"
documentation = "https://docs.rs/crate/hit-data"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
mopa = "0.2.2"
thiserror = "1.0"
linked-hash-map = "0.5.3"
rand = { version="0.7.2", features = ["wasm-bindgen"] }

